--- a/style.css
+++ b/style.css
@@ -1,97 +1,59 @@
-body {
+body
+{
     text-align: center;
-    margin: 0;
-    padding-top: 800px;
-}
-.profile {
-    width: 175px;
-    margin-bottom: 50px;
-    border-radius: 50%;
 }
 #welcome {
-    position: absolute;
-    overflow: hidden;
-    height: 800px;
     color: #FFFFFF;
-    left: 0;
-    top: 0;
     bottom: 0;
-    right: 0;
-    opacity: 0.83;
-    background: linear-gradient(#00fbff 0%, #ff00c8 100%);
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
     display: table;
     width: 100%;
     height: 100%;
     z-index: 9;
 }
-h1 {
-    font-size: 40px;
-    line-height: 1.2;
-    font-family: fantasy;
-    font-weight: 300;
-}
-#name {
-    font-size: 30px;
-    line-height: 1.2;
-    font-family: cursive;
-}
-h2 {
-    font-size: 30px;
-    font-weight: 300;
-    line-height: 1.2;
-    font-family: monospace;
-}
 #bio {
+    font-family: 'Cinzel Decorative', cursive;
     padding: 50px;
     text-align: center;
-    font-size: 42px;
 }
-.line { 
+h1 {
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 300;
+}
+
+.line {
     height: 6px;
-    background-color: black;
+    background-color: #000;
     width: 70px;
-    margin: 8px auto; 
+    margin: 8px auto;
 }
-p {
-    max-width: 450px;
-    margin: 25px auto;
-    font-size: 17px;
-    line-height: 1.3;
+#contact iframe
+{
+    width: 100%;
 }
-.parallax-inner {
-    display: table-cell;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
+.contact_1 h3
+{
+    display: inline;
 }
-.menu {
-    list-style: none;
-    font-family: 'Oi', cursive;
-    position: absolute;
-    right: 30px;
-    top: 10px;
-    z-index: 10;
-    cursor: pointer;
+.contact_1 a
+{
+    text-shadow: none;
 }
-.links { 
-float: left;
-    color: crimson;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-bottom: 5px;
-    padding-right: 9px;
-    font-family: 'Oi', cursive;
-    font-size: 15px;
+
+
+#videos iframe
+{
+    width: 80%;
 }
-.links:hover {
-    background-color:deeppink;
+
+
+input
+{
+    background: grey;
 }
-html {
-    scroll-behavior: smooth;
-}
-a {
-    text-decoration: none;
-}
-.Article:hover {
-    color: fuchsia;
+.my_nav_bar {
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
